--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme.(Sunny) -->
-    <style name="Theme.Weather" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Sunny" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/sunny_primary</item>
         <item name="colorPrimaryVariant">@color/sunny_primary_dark</item>
@@ -33,6 +33,24 @@
         <item name="android:textColor">@color/white</item>
 
         <item name="android:colorBackground">@color/cloudy_primary</item>
+
+    </style>
+
+    <style name="Theme.Rainy" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/rainy_primary</item>
+        <item name="colorPrimaryVariant">@color/rainy_primary_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/rainy_primary_light</item>
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/white</item>
+
+        <item name="android:colorBackground">@color/rainy_primary</item>
 
     </style>
 </resources>
